@@ -1,7 +1,6 @@
 package com.uneb.labweb.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
@@ -31,7 +30,7 @@ public class HealthCenterService {
         return healthCenterRepository.findAll()
                 .stream()
                 .map(healthCenterMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public HealthCenterDTO findHealthCenterById(@NotNull @Positive Long id) {
